Updated to Java 17 and Spark 4. Added .sbtopts to make Spark tests run with Java 17.